--- a/css/base.css
+++ b/css/base.css
@@ -56,6 +56,10 @@
   transition: opacity var(--transition-normal);
 }
 
+.sidebar-brand:hover {
+  cursor: pointer;
+}
+
 .sidebar.collapsed .sidebar-brand {
   opacity: 0;
   width: 0;
